--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,17 @@
 </head>
 <body>
 
-<%= yield %>
+<%= render 'layouts/header' %>
 
+<div id="content">
+
+	<% flash.each do |key, value| %>
+	  <div class="flash_<%= key %>"><%= value %></div>
+	<% end %>
+
+	<%= yield %>
+</div>
+
+<%= debug(params) if Rails.env.development? %>
 </body>
 </html>
