add model Picture and the upload mechanism

--- a/app/assets/stylesheets/albums.css.scss
+++ b/app/assets/stylesheets/albums.css.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Albums controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.bar {
+    height: 18px;
+    background: green;
+    display: inline-block;
+}
+
+.inline_header{
+	h1, h2, h3, h4, h5, h6{
+		display: inline-block;
+	}
+}
