--- a/app/views/albums/_album.html.erb
+++ b/app/views/albums/_album.html.erb
@@ -3,5 +3,5 @@
 		<h3> <%= album.title %> </h3>
 	<% end %>
 	<p> <%= album.description %> </p>
-	<p> <%= album.formatted_date %> </p>
+	<p> <%= formatted_date(album.date) %> </p>
 </p>
